# GAMES101

./: .gitignore
Assignment1/代码框架/: CMakeLists.txt  main.cpp  rasterizer.cpp  rasterizer.hpp
Assignment2/代码框架/: CMakeLists.txt  main.cpp  rasterizer.cpp  rasterizer.hpp
Assignment3/Code/: CMakeLists.txt  Texture.cpp  main.cpp  rasterizer.cpp
Assignment4/code/: CMakeLists.txt  main.cpp
GAMES101/Assignment1/代码框架/: main.cpp  rasterizer.hpp
GAMES101/pa0/: CMakeLists.txt
pa0/: CMakeLists.txt  main.cpp  test.cpp
